--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,22 @@
-body{
-    background-image: url('C:\Users\Sithembiso Sangweni\Documents\work\portfolio\img\0.jpg');
+*{
+  box-sizing:border-box;;
+}
+.header_bg{
+    background-image:url('C:/Users/Sithembiso Sangweni/Documents/work/portfolio/img/0.jpg');
+    background-color:#fff;
+    background-repeat: no-repeat;
+    background-attachment: fixed;  
+    background-size: cover;
+    height: 800px;
   }
+  body {
+    margin:0;
+    min-height:100% ;
+    background-color:#fff;
+    font-family:Montserrat, sans-serif;
+    color:#1a1b1f;
+    font-size:16px;
+    line-height:28px;
+    font-weight:400;
+    display:block;
+}
