--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
   box-sizing:border-box;;
 }
 .header_bg{
-    background-image:url('C:/Users/Sithembiso Sangweni/Documents/work/portfolio/img/0.jpg');
+    background-image:url('img/0.jpg');
     background-color:#fff;
     background-repeat: no-repeat;
     background-attachment: fixed;  
